[gd_scene load_steps=15 format=2]

[ext_resource path="res://mobs/components/hurt_by_bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://mobs/snowman/snowman.png" type="Texture" id=2]
[ext_resource path="res://mobs/snowman/snowman.gd" type="Script" id=3]
[ext_resource path="res://mobs/components/component_manager.tscn" type="PackedScene" id=4]
[ext_resource path="res://mobs/snowman/556858__uberproduktion__impulse-response-elemente-snow.wav" type="AudioStream" id=5]
[ext_resource path="res://mobs/components/attack_touch.tscn" type="PackedScene" id=6]
[ext_resource path="res://mobs/snowman/276918__kodimynatt__snowstep5.wav" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 25 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 25 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="Animation" id=6]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 3 ), Vector2( 4, 19 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 3 ), Vector2( 4, 14 ), Vector2( 4, 3 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 12.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 7, 12 )

[node name="Snowman" type="KinematicBody2D" groups=["Mob"]]
collision_layer = 64
collision_mask = 3
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 14, -3 )

[node name="MobComponentManager" parent="." instance=ExtResource( 4 )]
orb_amount = 25
knockback = 200
attack_damage = 10
max_health = 10
free_on_death = false

[node name="HitSound" parent="MobComponentManager" index="0"]
stream = ExtResource( 7 )
volume_db = 20.0

[node name="DeathSound" parent="MobComponentManager" index="1"]
stream = ExtResource( 5 )

[node name="AnimatedSprite" parent="MobComponentManager/SpriteHolder" index="0"]
position = Vector2( 0, 10 )
frames = SubResource( 3 )

[node name="HurtAnimationPlayer" parent="MobComponentManager/SpriteHolder/AnimatedSprite" index="0"]
anims/death = SubResource( 6 )
anims/hurt = SubResource( 7 )

[node name="HurtArea" parent="MobComponentManager" index="3"]
position = Vector2( 0, 10 )

[node name="CollisionShape2D" parent="MobComponentManager/HurtArea" index="0"]
position = Vector2( 4, 2.5 )
shape = SubResource( 4 )

[node name="Index" parent="MobComponentManager" index="4"]
position = Vector2( -0.5, 0 )

[node name="AttackTouch" parent="MobComponentManager" instance=ExtResource( 6 )]
enemy_path = NodePath("../..")
hit_area_path = NodePath("../HurtArea")

[node name="HurtByBullet" parent="MobComponentManager" instance=ExtResource( 1 )]
enemy_path = NodePath("../..")
hurt_area_path = NodePath("../HurtArea")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 13 )
shape = SubResource( 5 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="MobComponentManager"]
